<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PrivateFinanceMinister</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="log_in_account_name_hint">账户名称：</string>
    <string name="log_in_account_type_hint">账户类型：</string>
    <string name="log_in_empty_account">未选择账户</string>
    <string name="log_in_choose_account">选择账户</string>
    <string name="log_in_use_default_account">使用已登录的账户</string>
    <string name="log_in_use_default_account_hint1">要使用</string>
    <string name="log_in_use_default_account_hint2">登录吗？</string>
    <string name="log_in_use_default_account_true">使用此账户</string>
    <string name="log_in_use_default_account_false">选择其他账户</string>
    <string name="log_in_submit">登录</string>

    <string name="main_welcome">Hello，</string>
    <string name="main_to_add_dining">创建新用餐记录</string>
    <string name="main_to_list_contacts">查看好友列表</string>
    <string name="main_to_list_dinings">查看我的用餐记录</string>
    <string name="main_to_list_bills">查看我的账单</string>

    <string name="new_dining_restaurant_hint">地点：</string>
    <string name="new_dining_restaurant_hint_input">输入或选择用餐地点</string>
    <string name="new_dining_restaurant_choose">选择用餐地点</string>
    <string name="new_dining_cost_hint">总金额：</string>
    <string name="new_dining_cost_hint_input">输入消费金额（元）</string>
    <string name="new_dining_date_hint">时间：</string>
    <string name="new_dining_mate_hint">参与者：</string>
    <string name="new_dining_mate_choose_hint">选择参与者</string>
    <string name="new_dining_special_cost_hint">自付项目：</string>
    <string name="new_dining_special_cost_add_hint">添加</string>
    <string name="new_dining_special_cost_add_title">添加自付项目</string>
    <string name="new_dining_special_cost_view_hint">查看</string>
    <string name="new_dining_paid_hint">已付项目：</string>
    <string name="new_dining_paid_add_hint">添加</string>
    <string name="new_dining_paid_add_title">添加已付项目</string>
    <string name="new_dining_paid_view_hint">查看</string>
    <string name="new_dining_submit">提交聚餐记录</string>
    <string name="new_dining_failed_no_restaurant">请输入地点</string>
    <string name="new_dining_failed_no_cost">请输入总金额</string>
    <string name="new_dining_failed_no_participants">请选择参与者</string>
    <string name="new_dining_submitting">正在提交用餐信息</string>
    <string name="new_dining_failed_submit">提交失败</string>
    <string name="new_dining_not_participant">添加的用户不在参与者列表中</string>
    <string name="new_dining_number_invalid">输入了错误的数字格式</string>
    <string name="new_dining_invalid_paids">已付金额不等于消费金额</string>
    <string name="new_dining_too_much_specialCosts">自付金额超出总金额</string>

    <string name="dialog_add_user_cost_nickname_hint">用户昵称</string>
    <string name="dialog_add_user_cost_cost_hint">金额</string>

    <string name="dining_info_restaurant_hint">地点：</string>
    <string name="dining_info_add_restaurant">添加至饭店列表</string>
    <string name="dining_info_cost_hint">金额：</string>
    <string name="dining_info_date_hint">时间：</string>
    <string name="dining_info_mate_hint">参与者：</string>
    <string name="dining_info_mate_show">点击显示参与者列表</string>
    <string name="dining_info_special_cost_hint">自付项目：</string>
    <string name="dining_info_special_cost_show">点击显示自付项目列表</string>
    <string name="dining_info_paid_hint">已付项目：</string>
    <string name="dining_info_paid_show">点击显示已付项目列表</string>
    <string name="dining_info_state_hint">核准状态：</string>
    <string name="dining_info_state_not_approved">待核准</string>
    <string name="dining_info_state_approved">已核准</string>
    <string name="dining_info_state_rejected">已否决</string>
    <string name="dining_info_state_approve">核准</string>
    <string name="dining_info_state_reject">否决</string>

    <string name="dining_info_approve_success">成功核准用餐记录</string>
    <string name="dining_info_approve_failed">未能核准用餐记录</string>
    <string name="dining_info_reject_success">成功否决用餐记录</string>
    <string name="dining_info_reject_failed">未能否决用餐记录</string>
    <string name="dining_info_approve_connecting">正在提交审核信息</string>

    <string name="menu_setting">设置</string>
    <string name="menu_to_main">返回主页面</string>
    <string name="menu_log_out">注销账户</string>
    <string name="menu_quit">退出</string>

    <string name="logging_in">正在验证身份</string>
    <string name="fail_log_in">登录失败</string>

    <string name="set_nickname">设置昵称</string>
    <string name="set_nickname_hint">第一次登录请设置昵称</string>
    <string name="cannot_no_nickname_hint">sorry,你需要设置昵称</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="setting_nickname_hint">正在登记昵称</string>
    <string name="setting_nickname_success">设置成功</string>
    <string name="setting_nickname_failed">设置失败，请重新登录</string>
    <string name="setting_nickname_used">该昵称已存在</string>

    <string name="list_dinings_connecting">正在获取用餐记录</string>
    <string name="list_dinings_succeed">获取用餐记录成功</string>

    <string name="list_bills_connecting">正在获取账单</string>
    <string name="list_bills_succeed">获取账单成功</string>

    <string name="list_contacts_sync">同步好友列表</string>
    <string name="list_contacts_connecting">正在获取好友列表</string>
    <string name="list_contacts_success">获取列表成功</string>
    <string name="list_contacts_add">添加好友</string>
    <string name="list_contacts_hint">输入好友昵称</string>
    <string name="list_contacts_add_connecting">正在注册好友信息</string>
    <string name="list_contacts_add_no_such_user">该用户不存在，请重新输入</string>
    <string name="list_contacts_add_success">添加好友成功</string>

    <string name="display_bill_lender_hint">付款人：</string>
    <string name="display_bill_borrower_hint">欠款人：</string>
    <string name="display_bill_cost_hint">金额：</string>
    <string name="display_bill_dining_link">显示产生账单的用餐信息</string>
    <string name="display_bill_state_hint">核准状态：</string>
    <string name="display_bill_state_approved">已核准</string>
    <string name="display_bill_state_rejected">已否决</string>
    <string name="display_bill_state_not_yet">待核准</string>
    <string name="display_bill_state_cleared">已结清</string>
    <string name="display_bill_approve">核准</string>
    <string name="display_bill_reject">否决</string>
    <string name="display_bill_clear">结清</string>
    <string name="display_bill_approve_success">成功核准账单</string>
    <string name="display_bill_approve_failed">核准账单失败</string>
    <string name="display_bill_reject_success">成功否决账单</string>
    <string name="display_bill_reject_failed">否决账单失败</string>
    <string name="display_bill_clear_success">已申请结清账单</string>
    <string name="display_bill_clear_failed">未能申请结清账单</string>
    <string name="display_bill_approving">正在提交申请</string>

    <string name="choose_participants_save">保存</string>

</resources>
