<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dining_info_restaurant_hint"/>

        <TextView
                android:id="@+id/dining_info_restuarant"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:enabled="false"
                android:text="@string/dining_info_add_restaurant"/>
    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dining_info_cost_hint"/>
        <TextView
                android:id="@+id/dining_info_cost"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/dining_info_date_hint"/>
        <TextView
            android:id="@+id/dining_info_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/dining_info_mate_hint"/>
            <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/dining_info_mate_show"
                    android:onClick="displayParticipants"/>
        </LinearLayout>
        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/dining_info_paid_hint"/>
            <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:onClick="displayPaids"
                    android:text="@string/dining_info_paid_show"/>
        </LinearLayout>
        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/dining_info_special_cost_hint"/>
            <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:onClick="displaySpecialCosts"
                    android:text="@string/dining_info_special_cost_show"/>
        </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dining_info_state_hint"/>
        <TextView
            android:id="@+id/dining_info_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/dining_info_approve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="onApprove"
            android:text="@string/dining_info_state_approve"/>
        <Button
                android:id="@+id/dining_info_reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onReject"
                android:text="@string/dining_info_state_reject"/>
        </LinearLayout>
</LinearLayout>