<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_welcome" />
        <TextView
                android:id="@+id/main_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toAddDining"
        android:text="@string/main_to_add_dining"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toListContacts"
            android:text="@string/main_to_list_contacts"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toListDinings"
            android:text="@string/main_to_list_dinings"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toListBills"
            android:text="@string/main_to_list_bills"/>

</LinearLayout>
