<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_account_name_hint"/>
        <TextView
            android:id="@+id/log_in_account_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/log_in_empty_account"/>
        </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_account_type_hint"/>
        <TextView
                android:id="@+id/log_in_account_type"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/log_in_empty_account"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/log_in_choose_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChooseAccount"
            android:text="@string/log_in_choose_account"/>
        </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/log_in_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSubmit"
                android:enabled="false"
                android:text="@string/log_in_submit"/>
    </LinearLayout>

</LinearLayout>